# compiz-throw

./: CMakeLists.txt  bootstrap.sh  doxy.config.in  plugin.info  throw.c  throw.cpp  throw.h  throw.xml.in
docs/pages/: mainpage.h
src/: throw.cpp  throw.h
